# metra-monitor

./: .env.example  .gitignore  LICENSE  README.md  deploy.sh  pyproject.toml
app/: cli.py  config.py  db.py  main.py
app/alerts/: __init__.py  engine.py
app/api/: __init__.py  routes.py
app/briefings/: __init__.py  builder.py
app/core/: delay.py  models.py  stats.py  trip_resolver.py
app/ingest/: gtfs_time.py  static_ingestor.py
app/realtime/: loop.py  poller.py  state_store.py
app/telegram/: __init__.py  bot.py
dashboard/: .env.production  index.html  package-lock.json  package.json  tsconfig.json
dashboard/src/: alerts.ts  api.ts  board.ts  hero.ts  main.ts  map.ts  stats.ts  style.css  theme.ts
systemd/: metra-agent.service  metra-monitor.service
tests/: test_alert_engine.py  test_gtfs_time.py  test_realtime_loop.py  test_static_ingestor.py  test_stats.py  test_trip_resolver.py
