[project]
name = "metra-agent"
version = "0.1.0"
description = "Self-hosted Metra MD-W commute intelligence system"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "gtfs-realtime-bindings>=1.0.0",
    "protobuf>=5.0",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
metra = "app.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
